--- a/public/events/event/index.html
+++ b/public/events/event/index.html
@@ -660,6 +660,10 @@
   </main>
 
   <script type="module">
+    // /events/camporee-2025 → ["events","camporee-2025"] → eventId = "camporee-2025"
+const pathSegments = window.location.pathname.split("/").filter(Boolean);
+const eventId = pathSegments[pathSegments.length - 1];
+
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import {
       getAuth,
