--- a/public/calendar/index.html
+++ b/public/calendar/index.html
@@ -309,6 +309,7 @@
     </div>
 
     <nav>
+      <a href="/home">Home</a>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">Scoutmaster Blog</a>
