--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -348,6 +348,7 @@
     </div>
 
     <nav>
+      <a href="/home">Home</a>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">Scoutmaster Blog</a>
