--- a/public/scoutmaster/index.html
+++ b/public/scoutmaster/index.html
@@ -198,6 +198,13 @@
       resize: vertical;
       min-height: 120px;
     }
+    .post-body {
+  font-size: 15px;
+  line-height: 1.6;
+  white-space: pre-wrap;      /* keep your manual line breaks */
+  word-wrap: break-word;      /* older name, still useful */
+  overflow-wrap: break-word;  /* modern name */
+}
     .field input:focus,
     .field textarea:focus {
       outline: none;
